--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,7 @@
 {
     "*.{ts, tsx}": [
         "eslint 'src/**' --fix",
-        "git add"
+        "git add",
+        "npm run test:staged"
     ]
 }
