--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
