--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check": "npm-check -u -s"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.11",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -31,30 +32,30 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^4.1.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "jest-localstorage-mock": "^2.4.21",
-    "lint-staged": "^13.0.2",
+    "lint-staged": "^13.0.3",
     "node-sass": "^7.0.1",
-    "sass-loader": "^13.0.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "ts-jest": "^28.0.5",
-    "ts-loader": "^9.3.0",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
