--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,6 @@
-[
-  {
-    "node_js": "12",
-    "language": "node_js",
-    "script": [
-      "eslint 'src/**'",
-      "npm run test:ci"
-    ]
-  }
-]
+language: node_js
+node_js:
+  - 12
+script:
+  - eslint 'src/**'
+  - npm run test:ci
